cmake_minimum_required(VERSION 3.19)
project(DataStructure C)

set(CMAKE_C_STANDARD 99)

add_executable(DataStructure main.c predefined.h)
add_subdirectory(linear_list)
add_subdirectory(linked_list)
add_subdirectory(double_linked_list)
add_subdirectory(linear_stack)
add_subdirectory(linked_queue)
add_subdirectory(linear_queue_circular)
add_subdirectory(linked_stack)
add_subdirectory(binary_tree)
add_subdirectory(test)
add_subdirectory(threaded_binary_tree)
add_subdirectory(huffman)
add_subdirectory(hanoi)
add_subdirectory(Graph/AdjacencyMatrix)
add_subdirectory(Graph/AdjacencyList)
add_subdirectory(Graph/Depth-FirstSearch_List)
add_subdirectory(Graph/Depth-FirstSearch_Matrix)
add_subdirectory(Graph/Breadth-FirstSearch_List)