cmake_minimum_required(VERSION 3.19)
project(DataStructure C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c predefined.h)
add_subdirectory(linear_list)
add_subdirectory(linked_list)
add_subdirectory(double_linked_list)
add_subdirectory(linear_stack)
add_subdirectory(linked_queue)
add_subdirectory(linear_queue_circular)
add_subdirectory(linked_stack)
add_subdirectory(Tree/binary_tree)
add_subdirectory(test)
add_subdirectory(Tree/threaded_binary_tree)
add_subdirectory(Tree/huffman)
add_subdirectory(hanoi)
add_subdirectory(Graph/AdjacencyMatrix)
add_subdirectory(Graph/AdjacencyList)
add_subdirectory(Graph/Depth-FirstSearch_List)
add_subdirectory(Graph/Depth-FirstSearch_Matrix)
add_subdirectory(Graph/Breadth-FirstSearch_List)
add_subdirectory(Graph/Prim)
add_subdirectory(Searching/SequentialSearch)
add_subdirectory(Searching/BinarySearch)
add_subdirectory(Tree/BinarySortTree)
add_subdirectory(Searching/Hash)
add_subdirectory(Sorting/1_StraightInsertionSort)
add_subdirectory(Sorting/2_Binary_Inserting_Sort)
add_subdirectory(Sorting/3_ShellsSort)
add_subdirectory(Sorting/4_BubbleSort)
add_subdirectory(Sorting/5_QuickSort)
add_subdirectory(Sorting/6_SimpleSelectionSort)
add_subdirectory(Sorting/7_HeapSort)
add_subdirectory(Sorting/8_MergingSort)
add_subdirectory(Graph/Kruskal)
add_subdirectory(Graph/Dijkstra)
add_subdirectory(Graph/TopologicalSort)